--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,29 +10,12 @@
   [allowSlidePrev]="false"
   [pagination]="true">
 
-  <swiper-slide>
-    <img src="../../assets/Images/fondo.svg"/>
-    <h1 class="titles" > ¡Hola, viajero! </h1>
-    <p class="subtitles" >¡Bienvenido a nuestra aplicación! Estamos aquí para hacer que tu experiencia de viaje sea más fácil y emocionante. Explora, descubre y reserva tus próximas aventuras con nosotros.</p>
+  <swiper-slide *ngFor="let slide of slides; let i = index" >
+    <img src="{{slide.image}}"/>
+    <h1 class="titles" > {{slide.titles}} </h1>
+    <p class="subtitles" > {{slide.subtitles}} </p>
+    
   </swiper-slide>
-
-    <swiper-slide>
-      <img src="../../assets/Images/fondo 1.svg">
-      <h1 class="titles">¡Explora el mundo con nosotros!</h1>
-      <p class="subtitles">Descubre destinos desconocidos, reserva tus vuelos y alojamiento con facilidad, y personaliza tu viaje a tu gusto. ¡Únete a nosotros y transforma tus sueños de viaje en realidad!</p>
-    </swiper-slide>
-
-    <swiper-slide>
-      <img src="../../assets/Images/fondo 2.svg">
-      <h1 class="titles" >¡No esperes más!</h1>
-      <img src="../../assets/Images/16-56-52-749_512.gif">
-    </swiper-slide>
-
-    <swiper-slide>
-      <h1 class="titles" >Iniciar Sesión</h1>
-
-      <ion-input class="inputs" placeholder="Correo electronico" ></ion-input>
-    </swiper-slide>
 
    
   </swiper-container>
