--- a/src/app/intro/intro.page.scss
+++ b/src/app/intro/intro.page.scss
@@ -25,6 +25,7 @@
     display: flex;
     margin-left: 10px;
     margin-right: 10px;
+    margin-top: 30px;
   }
 
   .center-content {
@@ -39,18 +40,30 @@
   }
 
   .inputs {
-    margin-top: 40px;
+    margin: auto;
+    margin-top: 20px;
     padding-left: 10px !important ;
-    margin-left: 14px;
     border: solid;
     color: #918585;
     border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-left-width: 1px;
     border-right-width: 1px;
     width: 25rem;
     border-radius: 5px
   }
+  
+  .inputs-register {
+    padding-left: 10px !important ;
+    border: solid;
+    color: #918585;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-radius: 5px
+  }
+
+  .modal {
+    --ion-background-color: white;
+  }
+  
 
   swiper-container {
     width: 100%;
