--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,12 +14,18 @@
   line-height: 26px;
 }
 
+.header {
+    text-align: center;
+    background-color: #8c8c8c;
+    height: 30px;
+    padding-top: 10px;
+}
+
+
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
